chore: remove workaround for java 17 add-opens (#478)
* chore: remove workaround; add-opens are now added by appengine-plugins-core

* also bump version in docs